# machine_learning_differential_diagnoses

./: CMakeLists.txt  main.cpp
src/: main.cpp
